@@ -35,8 +35,12 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="../assets/js/feather.min.js"></script>
 
+    <script src="appdata.js"></script>
+
     <script>
         feather.replace();
-        $("#wrapper").toggleClass("toggled");
+        //$("#wrapper").toggleClass("toggled");
+
+        checkAppData();
     </script>
 </html>
