@@ -6,6 +6,7 @@
 export default {
   name: 'editor',
   data: {
+      project_dir: '',
       input: "Open a project file to display here"
   }
 }
