@@ -1,30 +1,30 @@
 <template>
 <div id="sidebar-wrapper">
     <ul id="sidebar-list" class="sidebar-nav">
+        <li id="sidebar-icons" class="row">
+            <a v-on:click="settings" href="#"><i data-feather="settings"></i></a>
+            <a v-on:click="github" href="#"><i data-feather="github"></i></a>
+        </li>
         <li class="sidebar-brand">
             <a href="#" v-on:click="openProjectDialog">
                 <i data-feather="folder"></i>
                 Load Project
             </a>
         </li>
-        <li id="sidebar-icons" class="row">
-            <a v-on:click="settings" href="#"><i data-feather="settings"></i></a>
-            <a v-on:click="openGithubSite" href="#"><i data-feather="github"></i></a>
-        </li>
+
         <li v-for="file in project_files" v-bind:key="file"><a v-on:click="openProjectFile" href="#">{{ file }}</a></li>
     </ul>
 </div>
 </template>
 
 <script>
-import Editor from './editor';
+import editor from './editor';
 import fs from 'fs';
 const { dialog, shell } = require('electron').remote;
 
 export default {
     name: 'sidebar',
     data: {
-        project_dir: '',
         project_files: []
     },
     methods: {
@@ -34,12 +34,14 @@ export default {
                 buttonLabel: 'Use',
                 properties: ['openDirectory']
             });
-            sidebar.project_dir = path !== undefined ? path[0] : null;
+            editor.data.project_dir = path !== undefined ? path[0] : null;
+
+            setAppProject(editor.data.project_dir);
 
             sidebar.openProjectDir();
         },
 
-        openGithubSite: (event) => {
+        github: (event) => {
             shell.openExternal('https://github.com/Sergix/Entryflow');
         },
         
@@ -48,25 +50,50 @@ export default {
         },
 
         openProjectDir: () => {
-            if (sidebar.project_dir === null || sidebar.project_dir === undefined || sidebar.project_dir === '')
+            if (editor.data.project_dir === null || editor.data.project_dir === undefined || editor.data.project_dir === '')
                 return undefined;
-                      
-            fs.readdir(sidebar.project_dir, function (err, files) {
-                if (err !== null)
+
+            fs.readdir(editor.data.project_dir, (err, files) => {
+                if (err)
                     return 0;
 
-                for (let i = 0; i < files.length; i++)
+                sidebar.project_files = [];
+
+                for (let i = 0; i < files.length; i++) {
+                    // if (fs.readdir(filename, (err, files) => {
+                    //     if (files === undefined) // Is not a directory
+                    //         return 1;
+                    //     else
+                    //         return 0;
+                    // }))
+                    
                     sidebar.project_files.push(files[i]);
+                    // else {
+
+                    // }
+                }
             });
         },
 
         openProjectFile: (event) => {
-            fs.readFile(
-                sidebar.project_dir + "\\" + event.toElement.text,
-                'utf8',
-                function (err, data) {
-                    editor.input = data;
+            let filename = editor.data.project_dir + "\\" + event.toElement.text;
+
+            fs.readdir(filename, (err, files) => {
+                if (files !== undefined) { // Is a directory
+                    sidebar.extendProjectFolder();
+                }
             });
+
+            fs.readFile(
+                filename,
+                'utf8',
+                (err, data) => {
+                    editor.data.input = data;
+            });
+        },
+
+        extendProjectFolder: () => {
+            
         }
     }
 }
