@@ -1,3 +1,14 @@
+(#7)[7/10/2017-21:41 pre-alpha Sergix]
+    Created appdata.js, containing methods for interacting with Entryflow's AppData directory.
+    project_dir and project_files moved to editor component.
+    Closing and re-opening the app automatically loads last loaded project.
+
+(#6)[7/9/2017-20:21 pre-alpha Sergix]
+    Moved sidebar icons to top of window.
+
+(#5)[7/9/2017-15:30 pre-alpha Sergix]
+    Fixed an bug where I forgot to clear the project_files array when opening a new directory.
+
 (#4)[7/9/2017-9:08 pre-alpha Sergix]
     Sidebar now has settings (does nothing atm) and GitHub (opens project page) icons.
     "Load Project" button now opens a dialog and selects a directory to use as a project, and puts the files in the sidebar and can be opened in the editor.
